kubernetes/spark/spark-master.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spark-master-k8s
  namespace: spark
spec:
  replicas: 1
  selector:
    matchLabels:
      component: spark-master-k8s
  template:
    metadata:
      namespace: spark
      labels:
        component: spark-master-k8s
    spec:
      containers:
        - name: spark-master-k8s
          image: spark
          imagePullPolicy: Never
          args: ["master"]
          ports:
            - containerPort: 7077
            - containerPort: 8090
          resources:
            requests:
              cpu: 100m
          volumeMounts:
            - name: spark-data
              mountPath: /data

      volumes:
        - name: spark-data
          emptyDir: {}
---
kind: Service
apiVersion: v1
metadata:
  name: spark-master-k8s
  namespace: spark
spec:
  ports:
    - name: webui
      port: 8090
      targetPort: 8090
    - name: spark
      port: 7077
      targetPort: 7077
  selector:
    component: spark-master-k8s
---
kind: Service
apiVersion: v1
metadata:
  name: spark-master-k8s
  namespace: test
spec:
  type: ExternalName
  externalName: spark-master-k8s.spark.svc.cluster.local 
  ports:
    - name: spark
      port: 7077
      targetPort: 7077
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-spark-master
  namespace: spark
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "localhost"
    http:
      paths:
        - pathType: Prefix
          path: /spark-master-k8s/
          backend:
            service:
              name: spark-master-k8s
              port:
                number: 8090
