kubernetes/spark/spark-worker.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spark-worker-k8s
  namespace: spark
spec:
  replicas: 2
  selector:
    matchLabels:
      component: spark-worker-k8s
  template:
    metadata:
      namespace: spark
      labels:
        component: spark-worker-k8s
    spec:
      containers:
        - name: spark-worker-k8s
          image: spark
          imagePullPolicy: Never
          args: ["worker"]
          ports:
            - containerPort: 8091
          resources:
            requests:
              cpu: 100m
          volumeMounts:
            - name: spark-data
              mountPath: /data

      volumes:
        - name: spark-data
          emptyDir: {}

---
kind: Service
apiVersion: v1
metadata:
  name: spark-worker-k8s
  namespace: spark
spec:
  ports:
    - name: webui
      port: 8091
      targetPort: 8091
  selector:
    component: spark-worker-k8s
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-spark-worker
  namespace: spark
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "localhost"
    http:
      paths:
        - pathType: Prefix
          path: /spark-worker-k8s/
          backend:
            service:
              name: spark-worker-k8s
              port:
                number: 8091
